--- a/app/src/main/res/layout/dog_fetcher_activity.xml
+++ b/app/src/main/res/layout/dog_fetcher_activity.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/dog_image_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:scaleType="centerCrop"
         tools:ignore="MissingPrefix" />
 
-
-    <!--app:url="https://images.dog.ceo/breeds/akita/Akita_Inu_dog.jpg"-->
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/fetch_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:height="64dp"
+        android:layout_margin="16dp"
         android:text="Fetch new dog!"
-        android:onClick="fetchNewDog"
         tools:ignore="HardcodedText" />
 
 </LinearLayout>
